fix(app-webpack): add missing deps

--- a/app-webpack/package.json
+++ b/app-webpack/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@quasar/app-webpack",
-  "version": "4.0.0-alpha.15",
+  "version": "4.0.0-alpha.16",
   "description": "Quasar Framework App CLI with Webpack",
   "bin": {
     "quasar": "./bin/quasar"
@@ -50,6 +50,7 @@
     "@quasar/render-ssr-error": "^1.0.2",
     "@quasar/ssl-certificate": "^1.0.0",
     "@quasar/ssr-helpers": "3.0.1",
+    "@rollup/pluginutils": "^4.0.4",
     "@types/chrome": "^0.0.208",
     "@types/compression": "^1.7.2",
     "@types/cordova": "0.0.34",
@@ -71,49 +72,50 @@
     "dotenv-expand": "^10.0.0",
     "elementtree": "0.1.7",
     "error-stack-parser": "^2.1.4",
-    "file-loader": "^6.2.0",
-    "fork-ts-checker-webpack-plugin": "^6.5.0",
     "esbuild": "^0.18.6",
     "express": "^4.17.3",
     "fast-glob": "^3.2.12",
+    "file-loader": "^6.2.0",
+    "fork-ts-checker-webpack-plugin": "^6.5.0",
     "fs-extra": "^11.1.0",
+    "hash-sum": "^2.0.0",
     "html-minifier": "^4.0.0",
     "html-webpack-plugin": "^5.5.1",
     "http-proxy-middleware": "^2.0.6",
-    "launch-editor-middleware": "^2.6.0",
-    "mini-css-extract-plugin": "^2.7.5",
     "inquirer": "^8.2.1",
     "isbinaryfile": "^5.0.0",
     "kolorist": "^1.5.1",
+    "launch-editor-middleware": "^2.6.0",
     "lodash": "^4.17.21",
     "log-update": "4.0.0",
+    "mini-css-extract-plugin": "^2.7.5",
     "minimist": "^1.2.6",
     "node-loader": "^2.0.0",
     "null-loader": "^4.0.1",
     "open": "^8.4.0",
-    "register-service-worker": "^1.7.2",
-    "sass": "1.32.12",
-    "sass-loader": "13.2.2",
     "postcss": "^8.4.4",
     "postcss-loader": "^7.3.0",
     "postcss-rtlcss": "^4.0.6",
+    "register-service-worker": "^1.7.2",
     "rollup-plugin-visualizer": "^5.5.4",
-    "terser-webpack-plugin": "^5.3.8",
+    "sass": "1.32.12",
+    "sass-loader": "13.2.2",
     "semver": "^7.5.2",
-    "ts-loader": "^9.4.2",
-    "typescript": "^4.9.4",
     "serialize-javascript": "^6.0.0",
     "table": "^6.8.0",
-    "webpack-merge": "^5.9.0",
+    "terser-webpack-plugin": "^5.3.8",
+    "ts-loader": "^9.4.2",
+    "typescript": "^4.9.4",
     "url-loader": "^4.1.1",
     "vue-loader": "^17.1.1",
     "vue-style-loader": "^4.1.3",
     "webpack": "^5.58.1",
-    "webpack-bundle-analyzer": "^4.8.0",
     "webpack-5-chain": "8.0.1",
+    "webpack-bundle-analyzer": "^4.8.0",
     "webpack-dev-middleware": "^6.1.1",
     "webpack-dev-server": "4.15.0",
     "webpack-hot-middleware": "^2.25.3",
+    "webpack-merge": "^5.9.0",
     "webpack-node-externals": "^3.0.0"
   },
   "devDependencies": {
@@ -127,7 +129,6 @@
     "pinia": "^2.1.3",
     "quasar": "^2.11.5",
     "ts-essentials": "^9.1.2",
-    "typescript": "~4.9.4",
     "vue": "^3.3.4",
     "vue-router": "^4.2.1",
     "vuex": "^4.0.0"
