--- a/app-vite/package.json
+++ b/app-vite/package.json
@@ -83,7 +83,7 @@
     "semver": "^7.5.2",
     "serialize-javascript": "^6.0.0",
     "table": "^6.8.0",
-    "vite": "^4.4.9",
+    "vite": "^5.0.0-beta.0",
     "webpack-merge": "^5.9.0"
   },
   "devDependencies": {
@@ -135,7 +135,7 @@
     }
   },
   "engines": {
-    "node": "^28 || ^26 || ^24 || ^22 || ^20 || ^18 || ^16",
+    "node": "^30 || ^28 || ^26 || ^24 || ^22 || ^20 || ^18",
     "npm": ">= 6.14.12",
     "yarn": ">= 1.17.3"
   },
