--- a/app-webpack/package.json
+++ b/app-webpack/package.json
@@ -50,13 +50,13 @@
     "@quasar/render-ssr-error": "^1.0.2",
     "@quasar/ssl-certificate": "^1.0.0",
     "@quasar/ssr-helpers": "3.0.1",
-    "@rollup/pluginutils": "^4.0.4",
-    "@types/chrome": "^0.0.208",
+    "@rollup/pluginutils": "^5.0.4",
+    "@types/chrome": "^0.0.244",
     "@types/compression": "^1.7.2",
-    "@types/cordova": "0.0.34",
+    "@types/cordova": "11.0.0",
     "@types/express": "^4.17.13",
     "@types/webpack-bundle-analyzer": "4.6.0",
-    "archiver": "^5.3.0",
+    "archiver": "^6.0.0",
     "autoprefixer": "^10.4.14",
     "browserslist": "^4.12.0",
     "chokidar": "^3.5.3",
@@ -65,14 +65,14 @@
     "copy-webpack-plugin": "11.0.0",
     "cross-spawn": "^7.0.3",
     "css-loader": "^6.7.3",
-    "css-minimizer-webpack-plugin": "^4.2.2",
-    "cssnano": "^5.1.14",
-    "dot-prop": "^6.0.1",
+    "css-minimizer-webpack-plugin": "^5.0.1",
+    "cssnano": "^6.0.1",
+    "dot-prop": "^8.0.2",
     "dotenv": "^16.0.3",
     "dotenv-expand": "^10.0.0",
     "elementtree": "0.1.7",
     "error-stack-parser": "^2.1.4",
-    "esbuild": "^0.18.6",
+    "esbuild": "^0.19.2",
     "express": "^4.17.3",
     "fast-glob": "^3.2.12",
     "file-loader": "^6.2.0",
@@ -82,7 +82,7 @@
     "html-minifier": "^4.0.0",
     "html-webpack-plugin": "^5.5.1",
     "http-proxy-middleware": "^2.0.6",
-    "inquirer": "^8.2.1",
+    "inquirer": "^9.2.10",
     "isbinaryfile": "^5.0.0",
     "kolorist": "^1.5.1",
     "launch-editor-middleware": "^2.6.0",
@@ -92,7 +92,7 @@
     "minimist": "^1.2.6",
     "node-loader": "^2.0.0",
     "null-loader": "^4.0.1",
-    "open": "^8.4.0",
+    "open": "^9.1.0",
     "postcss": "^8.4.4",
     "postcss-loader": "^7.3.0",
     "postcss-rtlcss": "^4.0.6",
@@ -113,7 +113,7 @@
     "webpack-5-chain": "8.0.1",
     "webpack-bundle-analyzer": "^4.8.0",
     "webpack-dev-middleware": "^6.1.1",
-    "webpack-dev-server": "4.15.0",
+    "webpack-dev-server": "^4.15.0",
     "webpack-hot-middleware": "^2.25.3",
     "webpack-merge": "^5.9.0",
     "webpack-node-externals": "^3.0.0"
