feat(app-webpack): upgrade to typescript v5; drop fork-ts-checker

--- a/app-webpack/package.json
+++ b/app-webpack/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@quasar/app-webpack",
-  "version": "4.0.0-alpha.22",
+  "version": "4.0.0-alpha.23",
   "description": "Quasar Framework App CLI with Webpack",
   "bin": {
     "quasar": "./bin/quasar"
@@ -51,18 +51,18 @@
     "@quasar/ssl-certificate": "^1.0.0",
     "@quasar/ssr-helpers": "3.0.1",
     "@rollup/pluginutils": "^5.0.4",
-    "@types/chrome": "^0.0.244",
+    "@types/chrome": "^0.0.245",
     "@types/compression": "^1.7.2",
-    "@types/cordova": "11.0.0",
+    "@types/cordova": "^11.0.1",
     "@types/express": "^4.17.13",
-    "@types/webpack-bundle-analyzer": "4.6.0",
+    "@types/webpack-bundle-analyzer": "^4.6.0",
     "archiver": "^6.0.0",
     "autoprefixer": "^10.4.14",
     "browserslist": "^4.12.0",
     "chokidar": "^3.5.3",
     "ci-info": "^3.7.1",
-    "compression-webpack-plugin": "10.0.0",
-    "copy-webpack-plugin": "11.0.0",
+    "compression-webpack-plugin": "^10.0.0",
+    "copy-webpack-plugin": "^11.0.0",
     "cross-spawn": "^7.0.3",
     "css-loader": "^6.7.3",
     "css-minimizer-webpack-plugin": "^5.0.1",
@@ -76,7 +76,6 @@
     "express": "^4.17.3",
     "fast-glob": "^3.2.12",
     "file-loader": "^6.2.0",
-    "fork-ts-checker-webpack-plugin": "^6.5.0",
     "fs-extra": "^11.1.0",
     "hash-sum": "^2.0.0",
     "html-minifier": "^4.0.0",
@@ -105,7 +104,7 @@
     "table": "^6.8.0",
     "terser-webpack-plugin": "^5.3.8",
     "ts-loader": "^9.4.2",
-    "typescript": "^4.9.4",
+    "typescript": "^5.2.2",
     "url-loader": "^4.1.1",
     "vue-loader": "^17.1.1",
     "vue-style-loader": "^4.1.3",
