--- a/app-webpack/package.json
+++ b/app-webpack/package.json
@@ -54,6 +54,7 @@
     "@types/chrome": "^0.0.245",
     "@types/compression": "^1.7.2",
     "@types/cordova": "^11.0.1",
+    "@types/node": "^20.5.9",
     "@types/express": "^4.17.13",
     "@types/webpack-bundle-analyzer": "^4.6.0",
     "archiver": "^6.0.0",
@@ -103,8 +104,6 @@
     "serialize-javascript": "^6.0.0",
     "table": "^6.8.0",
     "terser-webpack-plugin": "^5.3.8",
-    "ts-loader": "^9.4.2",
-    "typescript": "^5.2.2",
     "url-loader": "^4.1.1",
     "vue-loader": "^17.1.1",
     "vue-style-loader": "^4.1.3",
@@ -130,7 +129,9 @@
     "ts-essentials": "^9.1.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.1",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.0",
+    "ts-loader": "^9.2.6",
+    "typescript": "^5.2.2"
   },
   "peerDependencies": {
     "electron-builder": ">= 22",
