--- a/app-vite/package.json
+++ b/app-vite/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@quasar/app-vite",
-  "version": "2.0.0-alpha.28",
+  "version": "2.0.0-alpha.29",
   "description": "Quasar Framework App CLI with Vite",
   "bin": {
     "quasar": "./bin/quasar.js"
@@ -53,7 +53,7 @@
     "@rollup/pluginutils": "^5.0.4",
     "@types/chrome": "^0.0.244",
     "@types/compression": "^1.7.2",
-    "@types/cordova": "11.0.0",
+    "@types/cordova": "^11.0.0",
     "@types/express": "^4.17.13",
     "@vitejs/plugin-vue": "^4.0.0",
     "archiver": "^6.0.0",
@@ -97,7 +97,7 @@
     "pinia": "^2.1.3",
     "quasar": "^2.11.5",
     "ts-essentials": "^9.1.2",
-    "typescript": "~4.9.4",
+    "typescript": "^5.2.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.1",
     "vuex": "^4.0.0",
