--- a/app-vite/package.json
+++ b/app-vite/package.json
@@ -96,7 +96,7 @@
     "vue": "^3.0.0",
     "vue-router": "^4.0.0",
     "vuex": "^4.0.0",
-    "workbox-build": "^6.5.3"
+    "workbox-build": "^7.0.0"
   },
   "peerDependencies": {
     "electron-builder": ">= 22",
@@ -107,7 +107,7 @@
     "vue": "^3.2.29",
     "vue-router": "^4.0.12",
     "vuex": "^4.0.0",
-    "workbox-build": "^6.5.0"
+    "workbox-build": ">= 6"
   },
   "peerDependenciesMeta": {
     "electron-builder": {
