feat(app-webpack): (backport from next major version of q/app-webpack) use workbox v7 by default

--- a/app-webpack/package.json
+++ b/app-webpack/package.json
@@ -130,7 +130,7 @@
     "vue": "^3.2.29",
     "vue-router": "^4.0.12",
     "vuex": "^4.0.0",
-    "workbox-webpack-plugin": "^6.0.0"
+    "workbox-webpack-plugin": ">= 6"
   },
   "peerDependenciesMeta": {
     "electron-builder": {
