--- a/vite-plugin/playground/package.json
+++ b/vite-plugin/playground/package.json
@@ -16,6 +16,6 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
     "sass": "1.32.0",
-    "vite": "^4.3.9"
+    "vite": "^5.0.0-beta.0"
   }
 }
