--- a/utils/render-ssr-error/package.json
+++ b/utils/render-ssr-error/package.json
@@ -38,20 +38,20 @@
     "stack-trace": "^1.0.0-pre2"
   },
   "devDependencies": {
-    "@quasar/app-vite": "^1.3.0",
-    "@quasar/extras": "^1.16.4",
-    "autoprefixer": "^10.4.2",
-    "eslint": "^8.10.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.19.1",
-    "eslint-plugin-n": "^15.0.0",
+    "@quasar/app-vite": "^2.0.0-alpha.0",
+    "@quasar/extras": "^1.16.6",
+    "autoprefixer": "^10.4.15",
+    "eslint": "^8.49.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-n": "^16.1.0",
     "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-vue": "^9.0.0",
+    "eslint-plugin-vue": "^9.17.0",
     "fs-extra": "^11.1.1",
-    "postcss": "^8.4.14",
+    "postcss": "^8.4.29",
     "prismjs": "^1.29.0",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0"
+    "vue-router": "^4.2.4"
   }
 }
