--- a/ui/package.json
+++ b/ui/package.json
@@ -96,6 +96,7 @@
     "eslint-plugin-vue": "^9.14.1",
     "fast-glob": "^3.3.0",
     "module-alias": "^2.2.2",
+    "open": "^9.1.0",
     "postcss-rtlcss": "^4.0.6",
     "prettier": "^2.8.3",
     "recast": "^0.18.5",
