chore: make TS-related adjustments

--- a/create-quasar/scripts/tsconfig.json
+++ b/create-quasar/scripts/tsconfig.json
@@ -10,6 +10,9 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
 
+    // Scripts are meant to be consumed by tsx, not to be compiled
+    "noEmit": true,
+
     "allowJs": true
   }
 }
