--- a/app-vite/package.json
+++ b/app-vite/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@quasar/app-vite",
-  "version": "2.0.0-alpha.37",
+  "version": "2.0.0-alpha.38",
   "description": "Quasar Framework App CLI with Vite",
   "bin": {
     "quasar": "./bin/quasar.js"
@@ -49,7 +49,7 @@
   "dependencies": {
     "@quasar/render-ssr-error": "^1.0.2",
     "@quasar/ssl-certificate": "^1.0.0",
-    "@quasar/vite-plugin": "^1.4.1",
+    "@quasar/vite-plugin": "^1.6.0",
     "@rollup/pluginutils": "^5.0.4",
     "@types/chrome": "^0.0.246",
     "@types/compression": "^1.7.3",
@@ -83,7 +83,7 @@
     "semver": "^7.5.3",
     "serialize-javascript": "^6.0.0",
     "table": "^6.8.0",
-    "vite": "^5.0.0-beta.9",
+    "vite": "5.0.0-beta.0",
     "webpack-merge": "^5.9.0"
   },
   "devDependencies": {
