--- a/extras/package.json
+++ b/extras/package.json
@@ -153,8 +153,9 @@
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "6.4.2",
-    "@mdi/font": "7.2.96",
-    "@mdi/svg": "7.2.96",
+    "@mdi/font": "7.3.67",
+    "@mdi/svg": "7.3.67",
+    "@xmldom/xmldom": "0.8.10",
     "animate.css": "4.1.1",
     "bootstrap-icons": "^1.11.1",
     "cross-fetch": "^4.0.0",
@@ -162,9 +163,8 @@
     "eva-icons": "1.1.3",
     "fs-extra": "11.1.1",
     "glob": "10.3.10",
-    "ionicons": "7.1.2",
+    "ionicons": "7.2.1",
     "line-awesome": "1.3.0",
-    "themify-icons": "https://github.com/lykmapipo/themify-icons",
-    "@xmldom/xmldom": "0.8.10"
+    "themify-icons": "https://github.com/lykmapipo/themify-icons"
   }
 }
