chore(docs): pin vite version

--- a/docs/package.json
+++ b/docs/package.json
@@ -45,5 +45,8 @@
     "node": "^20 || ^18 || ^16",
     "npm": ">= 6.14.12",
     "yarn": ">= 1.17.3"
+  },
+  "resolutions": {
+    "vite": "=5.0.0-beta.13"
   }
 }
