--- a/app-vite/package.json
+++ b/app-vite/package.json
@@ -79,7 +79,7 @@
     "open": "^9.1.0",
     "register-service-worker": "^1.7.2",
     "rollup-plugin-visualizer": "^5.9.2",
-    "sass": "1.32.12",
+    "sass": "^1.33.0",
     "semver": "^7.5.3",
     "serialize-javascript": "^6.0.0",
     "table": "^6.8.0",
@@ -95,7 +95,7 @@
     "eslint-plugin-n": "^16.0.0",
     "eslint-plugin-promise": "^6.1.1",
     "pinia": "^2.1.3",
-    "quasar": "^2.11.5",
+    "quasar": "^2.14.0",
     "ts-essentials": "^9.1.2",
     "typescript": "^5.2.2",
     "vue": "^3.3.4",
@@ -108,7 +108,7 @@
     "electron-packager": ">= 15",
     "eslint": "^8.11.0",
     "pinia": "^2.0.0",
-    "quasar": "^2.8.0",
+    "quasar": "^2.14.0",
     "vue": "^3.2.29",
     "vue-router": "^4.0.12",
     "vuex": "^4.0.0",
