--- a/app-vite/package.json
+++ b/app-vite/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@quasar/app-vite",
-  "version": "1.6.2",
+  "version": "1.7.0",
   "description": "Quasar Framework App CLI with Vite",
   "bin": {
     "quasar": "./bin/quasar"
@@ -74,7 +74,7 @@
     "open": "^8.4.0",
     "register-service-worker": "^1.7.2",
     "rollup-plugin-visualizer": "^5.5.4",
-    "sass": "1.32.12",
+    "sass": "^1.33.0",
     "semver": "^7.3.5",
     "serialize-javascript": "^6.0.0",
     "table": "^6.8.0",
@@ -90,7 +90,7 @@
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
     "pinia": "^2.0.0",
-    "quasar": "^2.11.5",
+    "quasar": "^2.14.0",
     "ts-essentials": "^9.1.2",
     "typescript": "~4.9.4",
     "vue": "^3.0.0",
@@ -103,7 +103,7 @@
     "electron-packager": ">= 15",
     "eslint": "^8.11.0",
     "pinia": "^2.0.0",
-    "quasar": "^2.8.0",
+    "quasar": "^2.14.0",
     "vue": "^3.2.29",
     "vue-router": "^4.0.12",
     "vuex": "^4.0.0",
