--- a/vite-plugin/playground/package.json
+++ b/vite-plugin/playground/package.json
@@ -10,12 +10,12 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.16.6",
-    "quasar": "^2.11.10",
+    "quasar": "^2.14.0",
     "vue": "^3.3.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
-    "sass": "1.32.0",
-    "vite": "^5.0.0-beta.0"
+    "sass": "^1.33.0",
+    "vite": "^4.0.0"
   }
 }
