--- a/app-vite/package.json
+++ b/app-vite/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@quasar/app-vite",
-  "version": "2.0.0-alpha.41",
+  "version": "2.0.0-alpha.42",
   "description": "Quasar Framework App CLI with Vite",
   "bin": {
     "quasar": "./bin/quasar.js"
@@ -83,7 +83,7 @@
     "semver": "^7.5.3",
     "serialize-javascript": "^6.0.0",
     "table": "^6.8.0",
-    "vite": "^5.0.0-beta.17",
+    "vite": "^5.0.0",
     "webpack-merge": "^5.9.0"
   },
   "devDependencies": {
