--- a/ui/package.json
+++ b/ui/package.json
@@ -75,12 +75,11 @@
     "@quasar/extras": "^1.16.4",
     "@quasar/quasar-app-extension-testing-e2e-cypress": "^5.2.0-alpha.2",
     "@rollup/plugin-node-resolve": "^11.2.1",
-    "@rollup/plugin-replace": "^2.3.3",
+    "@rollup/plugin-replace": "^5.0.5",
     "autoprefixer": "^10.4.13",
-    "babel-preset-es2015-rollup": "^3.0.0",
     "cli-highlight": "^2.1.11",
     "cross-env": "^7.0.3",
-    "cssnano": "^5.1.14",
+    "cssnano": "^6.0.1",
     "cypress": "^13.2.0",
     "cypress-json-results": "^1.2.1",
     "diff": "^5.1.0",
@@ -104,7 +103,7 @@
     "rollup": "^2.34.0",
     "table": "^6.8.1",
     "typescript": "^4.9.5",
-    "uglify-es": "^3.3.9",
+    "uglify-js": "^3.3.9",
     "vue": "^3.3.4",
     "vue-router": "^4.2.1",
     "yargs": "^17.7.2"
