--- a/docs/package.json
+++ b/docs/package.json
@@ -23,7 +23,7 @@
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
-    "@quasar/app-vite": "^2.0.0-alpha.0",
+    "@quasar/app-vite": "^2.0.0-beta.1",
     "autoprefixer": "^10.4.13",
     "axios": "^1.2.2",
     "eslint": "^8.31.0",
