--- a/utils/render-ssr-error/package.json
+++ b/utils/render-ssr-error/package.json
@@ -38,7 +38,7 @@
     "stack-trace": "^1.0.0-pre2"
   },
   "devDependencies": {
-    "@quasar/app-vite": "^2.0.0-alpha.0",
+    "@quasar/app-vite": "^2.0.0-beta.1",
     "@quasar/extras": "^1.16.6",
     "autoprefixer": "^10.4.15",
     "eslint": "^8.49.0",
