--- a/docs/package.json
+++ b/docs/package.json
@@ -19,7 +19,7 @@
     "@quasar/extras": "^1.16.6",
     "prismjs": "^1.26.0",
     "quasar": "^2.11.5",
-    "vue": "3.4.15",
+    "vue": "^3.4.18",
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
