--- a/ui/package.json
+++ b/ui/package.json
@@ -103,7 +103,7 @@
     "rollup": "^2.34.0",
     "table": "^6.8.1",
     "typescript": "^4.9.5",
-    "uglify-es": "^3.3.9",
+    "uglify-js": "^3.3.9",
     "vue": "^3.4.18",
     "vue-router": "^4.2.1",
     "yargs": "^17.7.2"
