--- a/ui/package.json
+++ b/ui/package.json
@@ -73,27 +73,27 @@
   "devDependencies": {
     "@quasar/app-vite": "^2.0.0-beta.1",
     "@quasar/extras": "^1.16.4",
-    "@quasar/quasar-app-extension-testing-e2e-cypress": "^5.2.0-alpha.2",
+    "@quasar/quasar-app-extension-testing-e2e-cypress": "^5.2.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-replace": "^2.3.3",
-    "autoprefixer": "^10.4.13",
+    "autoprefixer": "^10.4.17",
     "babel-preset-es2015-rollup": "^3.0.0",
     "cli-highlight": "^2.1.11",
     "cross-env": "^7.0.3",
     "cssnano": "^5.1.14",
-    "cypress": "^13.2.0",
+    "cypress": "^13.6.4",
     "cypress-json-results": "^1.2.1",
-    "diff": "^5.1.0",
-    "eslint": "^8.41.0",
+    "diff": "^5.2.0",
+    "eslint": "^8.56.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-plugin-cypress": "^2.13.3",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^16.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-no-only-tests": "^3.1.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-vue": "^9.14.1",
+    "eslint-plugin-vue": "^9.21.1",
     "fast-glob": "^3.3.0",
     "module-alias": "^2.2.2",
     "open": "^9.1.0",
