chore: update release notes action

--- a/.github/workflows/release-notes.yml
+++ b/.github/workflows/release-notes.yml
@@ -51,8 +51,8 @@ jobs:
               v2: {
                 versionPatterns: {
                   quasar: /^2./,
-                  '@quasar/app-webpack': /^3./,
-                  '@quasar/app-vite': /^1./,
+                  '@quasar/app-webpack': /^(3|4)./,
+                  '@quasar/app-vite': /^(1|2)./,
                 },
                 packages: {
                   quasar: [],
