feat(app-webpack): upgrade last deps

--- a/app-webpack/package.json
+++ b/app-webpack/package.json
@@ -86,12 +86,12 @@
     "kolorist": "^1.5.1",
     "launch-editor-middleware": "^2.6.0",
     "lodash": "^4.17.21",
-    "log-update": "4.0.0",
+    "log-update": "^6.0.0",
     "mini-css-extract-plugin": "^2.8.0",
     "minimist": "^1.2.6",
     "node-loader": "^2.0.0",
     "null-loader": "^4.0.1",
-    "open": "^9.1.0",
+    "open": "^10.0.0",
     "postcss": "^8.4.35",
     "postcss-loader": "^8.1.0",
     "postcss-rtlcss": "^5.1.0",
