--- a/ui/package.json
+++ b/ui/package.json
@@ -74,16 +74,14 @@
     "@quasar/app-vite": "^2.0.0-beta.1",
     "@quasar/extras": "^1.16.4",
     "@quasar/quasar-app-extension-testing-e2e-cypress": "^5.2.1",
-    "@rollup/plugin-node-resolve": "^11.2.1",
-    "@rollup/plugin-replace": "^2.3.3",
     "autoprefixer": "^10.4.17",
-    "babel-preset-es2015-rollup": "^3.0.0",
     "cli-highlight": "^2.1.11",
     "cross-env": "^7.0.3",
-    "cssnano": "^5.1.14",
+    "cssnano": "^6.0.5",
     "cypress": "^13.6.6",
     "cypress-json-results": "^1.2.1",
     "diff": "^5.2.0",
+    "esbuild": "^0.20.1",
     "eslint": "^8.57.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-friendly-formatter": "^4.0.1",
@@ -96,16 +94,14 @@
     "eslint-plugin-vue": "^9.22.0",
     "fast-glob": "^3.3.0",
     "module-alias": "^2.2.2",
-    "open": "^9.1.0",
-    "postcss-rtlcss": "^4.0.6",
-    "prettier": "^2.8.3",
+    "open": "^10.0.4",
+    "postcss-rtlcss": "^5.1.0",
+    "prettier": "^3.0.0",
     "recast": "^0.18.5",
     "rimraf": "^3.0.1",
-    "rollup": "^2.34.0",
     "table": "^6.8.1",
-    "typescript": "^4.9.5",
-    "uglify-es": "^3.3.9",
-    "vue": "^3.4.18",
+    "typescript": "^5.3.3",
+    "vue": "^3.4.20",
     "vue-router": "^4.2.1",
     "yargs": "^17.7.2"
   },
