--- a/vite-plugin/package.json
+++ b/vite-plugin/package.json
@@ -54,15 +54,15 @@
     "eslint-plugin-vue": "^9.22.0",
     "quasar": "^2.11.10",
     "rimraf": "^5.0.5",
-    "rollup": "^2.58.0",
+    "rollup": "^4.12.0",
     "start-server-and-test": "^2.0.0",
     "typescript": "^5.0.4",
     "vitest": "^1.3.1"
   },
   "peerDependencies": {
-    "@vitejs/plugin-vue": "^2.0.0 || ^3.0.0 || ^4.0.0 || ^5.0.0-beta.0",
+    "@vitejs/plugin-vue": "^2.0.0 || ^3.0.0 || ^4.0.0 || ^5.0.0",
     "quasar": "^2.8.0",
-    "vite": "^2.0.0 || ^3.0.0 || ^4.0.0 || ^5.0.0-beta.0",
+    "vite": "^2.0.0 || ^3.0.0 || ^4.0.0 || ^5.0.0",
     "vue": "^3.0.0"
   },
   "license": "MIT",
@@ -73,7 +73,7 @@
     "url": "https://donate.quasar.dev"
   },
   "engines": {
-    "node": ">=12"
+    "node": ">=18"
   },
   "publishConfig": {
     "access": "public"
