--- a/app-webpack/package.json
+++ b/app-webpack/package.json
@@ -51,12 +51,12 @@
     "@quasar/ssl-certificate": "^1.0.0",
     "@quasar/ssr-helpers": "3.0.1",
     "@rollup/pluginutils": "^5.0.4",
-    "@types/chrome": "^0.0.261",
+    "@types/chrome": "^0.0.262",
     "@types/compression": "^1.7.2",
     "@types/cordova": "^11.0.1",
     "@types/express": "^4.17.13",
     "@types/webpack-bundle-analyzer": "^4.7.0",
-    "archiver": "^6.0.0",
+    "archiver": "^7.0.0",
     "autoprefixer": "^10.4.14",
     "browserslist": "^4.23.0",
     "chokidar": "^3.6.0",
@@ -126,11 +126,11 @@
     "pinia": "^2.1.3",
     "quasar": "^2.14.5",
     "ts-essentials": "^9.1.2",
+    "ts-loader": "^9.2.6",
+    "typescript": "^5.2.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.1",
-    "vuex": "^4.0.0",
-    "ts-loader": "^9.2.6",
-    "typescript": "^5.2.2"
+    "vuex": "^4.0.0"
   },
   "peerDependencies": {
     "electron-builder": ">= 22",
