feat: replace rimraf with fs-extras

--- a/ui/package.json
+++ b/ui/package.json
@@ -93,12 +93,12 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-vue": "^9.22.0",
     "fast-glob": "^3.3.0",
+    "fs-extra": "^11.2.0",
     "module-alias": "^2.2.2",
     "open": "^10.0.4",
     "postcss-rtlcss": "^5.1.0",
     "prettier": "^3.0.0",
     "recast": "^0.23.4",
-    "rimraf": "^3.0.0",
     "table": "^6.8.1",
     "typescript": "^5.3.3",
     "vue": "^3.4.20",
