feat(app-webpack): use latest @quasar/babel-preset-app

--- a/app-webpack/package.json
+++ b/app-webpack/package.json
@@ -46,7 +46,7 @@
     "url": "https://donate.quasar.dev"
   },
   "dependencies": {
-    "@quasar/babel-preset-app": "2.0.2",
+    "@quasar/babel-preset-app": "^2.0.3",
     "@quasar/render-ssr-error": "^1.0.3",
     "@quasar/ssr-helpers": "2.2.2",
     "@types/chrome": "^0.0.208",
