chore(workflows): minify the release notes output

--- a/.github/workflows/release-notes.yml
+++ b/.github/workflows/release-notes.yml
@@ -143,7 +143,7 @@ jobs:
             const writeJsonFile = (name, data) =>
               writeFile(
                 join(directory, `${name}.json`),
-                JSON.stringify(data, null, 2),
+                JSON.stringify(data),
                 'utf8'
               );
             await Promise.all(
