--- a/.github/workflows/tests-on-pr.yml
+++ b/.github/workflows/tests-on-pr.yml
@@ -29,14 +29,14 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'yarn'
+          cache: 'pnpm'
 
       - name: Install dependencies
-        run: yarn
+        run: pnpm i
 
       - name: Build the UI package
         working-directory: ui
-        run: yarn build
+        run: pnpm build
 
       - name: Upload UI build artifact
         uses: actions/upload-artifact@v4
@@ -46,7 +46,7 @@ jobs:
 
       - name: Build vite-plugin package
         working-directory: vite-plugin
-        run: yarn build
+        run: pnpm build
 
       - name: Upload vite-plugin build artifact
         uses: actions/upload-artifact@v4
@@ -82,10 +82,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'yarn'
+          cache: 'pnpm'
 
       - name: Install dependencies
-        run: yarn
+        run: pnpm i
 
       - name: Download UI build artifact
         uses: actions/download-artifact@v4
@@ -105,7 +105,7 @@ jobs:
           CYPRESS_JUNIT_RESULTS_FILENAME: test-results/${{ matrix.browser }}/[hash].xml
         with:
           install: false
-          command: yarn test:component:run --browser ${{ matrix.browser }}
+          command: pnpm test:component:run --browser ${{ matrix.browser }}
           working-directory: ui
 
       # Upload required artifacts to be used in tests-on-pr-report.yml
