--- a/docs/package.json
+++ b/docs/package.json
@@ -8,9 +8,9 @@
   "type": "module",
   "scripts": {
     "prepare-docs": "node build/copy-quasar-api.js",
-    "dev": "yarn prepare-docs && quasar dev",
-    "dev:ssr": "yarn prepare-docs && quasar dev -m ssr",
-    "build": "yarn prepare-docs && node build/search.js && quasar build -m ssr && node build/fix-ssr-manifest.js && mkdir -p dist/quasar.dev/client/examples/ && cp -R src/examples/* dist/quasar.dev/client/examples/ && node build/ssg.js",
+    "dev": "pnpm prepare-docs && quasar dev",
+    "dev:ssr": "pnpm prepare-docs && quasar dev -m ssr",
+    "build": "pnpm prepare-docs && node build/search.js && quasar build -m ssr && node build/fix-ssr-manifest.js && mkdir -p dist/quasar.dev/client/examples/ && cp -R src/examples/* dist/quasar.dev/client/examples/ && node build/ssg.js",
     "relnotes": "node build/release-notes/index.js",
     "lint": "eslint --ext .js,.vue ./ --fix",
     "test": "echo \"No test specified\" && exit 0"
