--- a/ui/package.json
+++ b/ui/package.json
@@ -25,19 +25,19 @@
     "dev:capacitor:ios": "cd ./dev && node ./script.dev.js dev -m capacitor -T ios && cd ..",
     "dev:capacitor:android": "cd ./dev && node ./script.dev.js dev -m capacitor -T android && cd ..",
     "dev:umd": "node build/script.test-umd.js",
-    "dev:quploader": "cd dev/upload-server && yarn && cd ../.. && node dev/upload-server/server.js",
+    "dev:quploader": "cd dev/upload-server && pnpm i && cd ../.. && node dev/upload-server/server.js",
     "build": "node build/script.build.js",
     "lint": "eslint --ext .js,.cjs,.mjs,.vue src dev --report-unused-disable-directives",
     "lint-fix": "eslint --ext .js,.cjs,.mjs,.vue src dev --fix --report-unused-disable-directives",
     "format:types": "prettier --write \"types/**/*.{d.ts,ts,json}\"",
     "test:create": "node ./test/cypress/helpers/create-spec.js -c",
-    "test:build": "yarn build",
-    "test:e2e": "yarn test:build && cross-env NODE_ENV=test start-test \"node ./dev/script.dev.js\" http-get://localhost:9000 \"cypress open --project ./dev --e2e\"",
+    "test:build": "pnpm build",
+    "test:e2e": "pnpm test:build && cross-env NODE_ENV=test start-test \"node ./dev/script.dev.js\" http-get://localhost:9000 \"cypress open --project ./dev --e2e\"",
     "test:e2e:run": "cross-env NODE_ENV=test start-test \"node ./dev/script.dev.js\" http-get://localhost:9000 \"cypress run --project ./dev --e2e\"",
-    "test:e2e:ci": "yarn test:build && yarn test:e2e:run",
-    "test:component": "yarn test:build && cross-env NODE_ENV=test cypress open --project ./dev --component",
+    "test:e2e:ci": "pnpm test:build && pnpm test:e2e:run",
+    "test:component": "pnpm test:build && cross-env NODE_ENV=test cypress open --project ./dev --component",
     "test:component:run": "cross-env NODE_ENV=test cypress run --project ./dev --component",
-    "test:component:ci": "yarn test:build && yarn test:component:run"
+    "test:component:ci": "pnpm test:build && pnpm test:component:run"
   },
   "repository": {
     "type": "git",
