--- a/vite-plugin/playground/package.json
+++ b/vite-plugin/playground/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "start": "yarn build && yarn serve",
+    "start": "pnpm build && pnpm serve",
     "build": "vite build",
     "serve": "vite preview"
   },
