chore: correctly include extras in workspaces

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,10 +2,10 @@
 # Use individual folders for usual development of everything else.
 packages:
   - app-vite
-  - '@quasar/extras'
   - vite-plugin
   - vite-plugin/playground
   - utils/render-ssr-error
   - utils/ssl-certificate
+  - extras
   - ui
   - docs
