--- a/ui/package.json
+++ b/ui/package.json
@@ -28,7 +28,7 @@
     "dev:quploader": "cd dev/upload-server && pnpm i && cd ../.. && node dev/upload-server/server.js",
     "build": "node build/script.build.js",
     "lint": "eslint --ext .js,.cjs,.mjs,.vue src dev --report-unused-disable-directives",
-    "lint-fix": "eslint --ext .js,.cjs,.mjs,.vue src dev --fix --report-unused-disable-directives",
+    "lint-fix": "pnpm lint --fix",
     "format:types": "prettier --write \"types/**/*.{d.ts,ts,json}\"",
     "test:create": "node ./test/cypress/helpers/create-spec.js -c",
     "test:build": "pnpm build",
@@ -81,16 +81,8 @@
     "cypress": "^13.6.6",
     "diff": "^5.2.0",
     "esbuild": "^0.20.1",
-    "eslint": "^8.57.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-friendly-formatter": "^4.0.1",
     "eslint-plugin-cypress": "^2.13.3",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-no-only-tests": "^3.1.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-vue": "^9.22.0",
     "fast-glob": "^3.3.0",
     "fs-extra": "^11.2.0",
     "module-alias": "^2.2.2",
