--- a/app-vite/package.json
+++ b/app-vite/package.json
@@ -89,6 +89,7 @@
     "electron-builder": "^24.12.0",
     "electron-packager": "^17.1.1",
     "eslint": "^8.57.0",
+    "eslint-config-quasar": "workspace:*",
     "pinia": "^2.1.3",
     "quasar": "^2.14.0",
     "ts-essentials": "^9.1.2",
