--- a/ui/package.json
+++ b/ui/package.json
@@ -81,6 +81,7 @@
     "cypress": "^13.6.6",
     "diff": "^5.2.0",
     "esbuild": "^0.20.1",
+    "eslint-config-quasar": "workspace:*",
     "eslint-plugin-cypress": "^2.13.3",
     "eslint-plugin-no-only-tests": "^3.1.0",
     "fast-glob": "^3.3.0",
