--- a/utils/render-ssr-error/package.json
+++ b/utils/render-ssr-error/package.json
@@ -41,6 +41,7 @@
     "@quasar/app-vite": "^2.0.0-beta.1",
     "@quasar/extras": "^1.16.6",
     "autoprefixer": "^10.4.17",
+    "eslint-config-quasar": "workspace:*",
     "fs-extra": "^11.1.1",
     "postcss": "^8.4.35",
     "prismjs": "^1.29.0",
