--- a/utils/ssl-certificate/package.json
+++ b/utils/ssl-certificate/package.json
@@ -33,5 +33,8 @@
   "dependencies": {
     "fs-extra": "^11.1.1",
     "selfsigned": "^2.1.1"
+  },
+  "devDependencies": {
+    "eslint-config-quasar": "workspace:*"
   }
 }
