--- a/.github/workflows/build-types.yml
+++ b/.github/workflows/build-types.yml
@@ -54,6 +54,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v3
+
       - uses: actions/setup-node@v4
         with:
           node-version: 20
