chore: setup root lint script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "packageManager": "pnpm@8.15.4",
   "scripts": {
     "preinstall": "npx only-allow@1.2.1 pnpm",
-    "lint": "pnpm --recursive run lint",
+    "lint:root": "eslint .eslintrc.cjs --report-unused-disable-directives --fix",
+    "lint": "pnpm lint:root && pnpm --recursive run lint",
     "test": "pnpm vite-ecosystem-ci:build && pnpm vite-ecosystem-ci:test && pnpm vue-ecosystem-ci:test",
     "vite-ecosystem-ci:build": "pnpm workspace @quasar/vite-plugin build && pnpm workspace quasar test:build",
     "vite-ecosystem-ci:test": "pnpm workspace @quasar/vite-plugin test",
