--- a/app-webpack/package.json
+++ b/app-webpack/package.json
@@ -119,10 +119,7 @@
     "electron-builder": "^24.12.0",
     "electron-packager": "^17.1.1",
     "eslint": "^8.57.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^16.0.0",
-    "eslint-plugin-promise": "^6.1.1",
+    "eslint-config-quasar": "workspace:*",
     "pinia": "^2.1.3",
     "quasar": "^2.14.5",
     "ts-essentials": "^9.1.2",
@@ -170,13 +167,6 @@
     "node": "^28 || ^26 || ^24 || ^22 || ^20 || ^18 || ^16",
     "npm": ">= 6.14.12",
     "yarn": ">= 1.17.3"
-  },
-  "pnpm": {
-    "peerDependencyRules": {
-      "ignoreMissing": [
-        "rollup"
-      ]
-    }
   },
   "volta": {
     "node": "lts"
