ci: apply skip yarn corepack check to other scripts as well but still keep it in create-test-project script to avoid the problem when executing the script in different environments

--- a/.github/workflows/project-creation-tests.yml
+++ b/.github/workflows/project-creation-tests.yml
@@ -63,6 +63,10 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    env:
+      # See https://github.com/yarnpkg/yarn/issues/9015
+      SKIP_YARN_COREPACK_CHECK: 1
+
     defaults:
       run:
         working-directory: create-quasar
