--- a/create-quasar/templates/app/quasar-v2/ts-webpack-3/BASE/_tsconfig.json
+++ b/create-quasar/templates/app/quasar-v2/ts-webpack-3/BASE/_tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "@quasar/app-webpack/tsconfig-preset",
   "compilerOptions": {
-    "baseUrl": "."<% if (typescriptConfig === 'class') { %>,
+    "baseUrl": "."<% if (sfcStyle === 'class') { %>,
     "experimentalDecorators": true,
     "useDefineForClassFields": true<% } %>
   }
