refactor(create-quasar): ts templates rework; removed "class" sfc option; simplified q-v2 prompts

--- a/create-quasar/templates/app/quasar-v2/ts-vite-1/BASE/_tsconfig.json
+++ b/create-quasar/templates/app/quasar-v2/ts-vite-1/BASE/_tsconfig.json
@@ -1,8 +1,6 @@
 {
   "extends": "@quasar/app-vite/tsconfig-preset",
   "compilerOptions": {
-    "baseUrl": "."<% if (sfcStyle === 'class') { %>,
-    "experimentalDecorators": true,
-    "useDefineForClassFields": true<% } %>
+    "baseUrl": "."
   }
 }
