--- a/create-quasar/templates/app/quasar-v2/ts-webpack-4/BASE/_tsconfig.json
+++ b/create-quasar/templates/app/quasar-v2/ts-webpack-4/BASE/_tsconfig.json
@@ -1,8 +1,6 @@
 {
   "extends": "@quasar/app-webpack/tsconfig-preset",
   "compilerOptions": {
-    "baseUrl": "."<% if (sfcStyle === 'class') { %>,
-    "experimentalDecorators": true,
-    "useDefineForClassFields": true<% } %>
+    "baseUrl": "."
   }
 }
