--- a/create-quasar/templates/app/quasar-v2/ts-webpack-4/BASE/_tsconfig.json
+++ b/create-quasar/templates/app/quasar-v2/ts-webpack-4/BASE/_tsconfig.json
@@ -2,5 +2,6 @@
   "extends": "@quasar/app-webpack/tsconfig-preset",
   "compilerOptions": {
     "baseUrl": "."
-  }
+  },
+  "exclude": ["./dist", "./.quasar", "./node_modules"]
 }
