--- a/create-quasar/templates/app/quasar-v2/ts-vite-2/BASE/_tsconfig.json
+++ b/create-quasar/templates/app/quasar-v2/ts-vite-2/BASE/_tsconfig.json
@@ -3,5 +3,12 @@
   "compilerOptions": {
     "baseUrl": "."
   },
-  "exclude": ["./dist", "./.quasar", "./node_modules"]
+  "exclude": [
+    "./dist",
+    "./.quasar",
+    "./node_modules",
+    "./src-capacitor",
+    "./src-cordova",
+    "./quasar.config.*.temporary.compiled*"
+  ]
 }
