--- a/docs/package.json
+++ b/docs/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-quasar": "^1.1.0",
     "eslint-plugin-vue": "^9.22.0",
     "fast-glob": "^3.2.12",
+    "fs-extra": "^11.2.0",
     "gray-matter": "^4.0.2",
     "markdown-ast": "^0.3.0",
     "markdown-it": "^14.0.0",
